force-app/main/default/objects/BC_Integration_Config__mdt/BC_Integration_Config__mdt.object-meta.xml
<CustomObject>
    <description>Configuration for each Business Central Integration</description>
    <label>BC Integration Config</label>
    <pluralLabel>BC Integration Configs</pluralLabel>
</CustomObject>