force-app/main/default/objects/BC_Integration_Config__mdt/fields/Integration_Name__c.field-meta.xml
<CustomField>
    <fullName>Integration_Name__c</fullName>
    <inlineHelpText>Business Central Integration - should be the last value in the URI path</inlineHelpText>
    <label>Integration Name</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>SFContactEntries</fullName>
                <default>true</default>
                <label>SFContactEntries</label>
            </value>
            <value>
                <fullName>SFCustomerEntries</fullName>
            </value>
            <value>
                <fullName>SFOpportunityEntries</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>