force-app/main/default/objects/BC_Integration_Config__mdt/fields/Named_Credential__c.field-meta.xml
<CustomField>
    <fullName>Named_Credential__c</fullName>
    <inlineHelpText>Named Credential for the web service for authentication</inlineHelpText>
    <label>Named Credential</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Business_Central_US</fullName>
                <default>true</default>
                <label>Business_Central_US</label>
            </value>
            <value>
                <fullName>Business_Central_CAN</fullName>
            </value>
            <value>
                <fullName>Business_Central_ANZ</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>