force-app/main/default/objects/BC_Integration_Config__mdt/fields/URI_Path__c.field-meta.xml
<CustomField>
    <fullName>URI_Path__c</fullName>
    <inlineHelpText>URI path of the web service endpoint. Appends to the URL in the Named Credential.</inlineHelpText>
    <label>URI Path</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>