force-app/main/default/objects/BC_Integration_Config__mdt/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>MasterLabel</columns>
    <columns>DeveloperName</columns>
    <columns>Integration_Name__c</columns>
    <columns>Named_Credential__c</columns>
    <columns>Division__c</columns>
    <columns>URI_Path__c</columns>
    <columns>Active__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>